k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starter-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/account/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: account-service
            port:
              number: 80
      - path: /api/store/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: store-service
            port:
              number: 80
  ingressClassName: nginx
